<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:clickable="true">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:text="#"
        android:textColor="@color/primary_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/basket_item_name_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="2.5"
        android:gravity="center"
        android:text="@string/basket_item_name"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/basket_item_count_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/count"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/unit"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/basket_item_operation_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="1.25"
        android:gravity="center"
        android:text="@string/operation"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />
</LinearLayout>