<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/milky"
    android:clickable="true">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:id="@+id/no"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/FoodNameTV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="2.5"
        android:gravity="center"
        android:text="@string/basket_item_name"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/food_count"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="2.25"
        android:gravity="center"
        android:prompt="@string/count"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/unit"
        android:id="@+id/food_unit"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/delete_basket_item_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="8sp"
        android:layout_weight="1.25"
        android:background="@drawable/delete_btn_border"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:textSize="14sp" />
</LinearLayout>