<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:background="@color/milky"
    android:clickable="true">

    <!-- TODO: Update blank fragment layout -->
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/milky"
        android:orientation="vertical"
        android:visibility="invisible">


        <!--<Spinner-->
        <!--android:id="@+id/stay_duration_type"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="64dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/ah_short_stay_tag"-->
        <!--android:textColor="@color/hotel_primary"-->
        <!--android:textSize="18sp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"/>-->


        <TextView
            android:id="@+id/stay_duration_type"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/ah_short_stay_tag"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<TextView-->
        <!--android:id="@+id/textView4"-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="32dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/ah_arrival_date_btn"-->
        <!--android:textColor="@color/hotel_black"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toEndOf="@+id/arrival_date"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/stay_duration_type" />-->

        <Button
            android:id="@+id/arrival_date"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"

            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/ah_arrival_date_btn"
            android:textColor="@color/milky"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@+id/arrival_time"
            app:layout_constraintTop_toBottomOf="@+id/stay_duration_type" />

        <Button
            android:id="@+id/arrival_time"
            android:layout_width="144dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"

            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/ah_arrival_time_btn"
            android:textColor="@color/milky"
            app:layout_constraintEnd_toStartOf="@+id/arrival_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stay_duration_type" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/arrival_time"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/stay_time" />

        <RadioGroup
            android:id="@+id/stay_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="parent"
            android:layoutDirection="rtl"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp">

            <RadioButton
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_hour"
                android:checked="true" />

            <RadioButton
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_hour" />

        </RadioGroup>


        <Button
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@color/hotel_primary"
            android:text="@string/ah_continue"
            android:textColor="@color/hotel_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>