<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milky"
    android:clickable="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/back_border">

        <TextView
            android:id="@+id/passenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="اطلاعات خریدار"
            android:textColor="@color/colorAccent"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/editor"
            android:hint="@string/persian_name"
            android:paddingRight="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/edit_nat_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passenger"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <!--<EditText-->
        <!--android:id="@+id/edit_last_name"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="10dp"-->
        <!--android:layout_marginStart="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:background="@color/hotel_white"-->
        <!--android:gravity="center"-->
        <!--android:hint="@string/ah_pass_last_name"-->
        <!--android:textColor="@color/hotel_black"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/txt2"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/edit_name"-->
        <!--app:layout_constraintHorizontal_weight="2"/>-->

        <EditText
            android:id="@+id/edit_nat_code"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/editor"
            android:hint="@string/ah_pass_national_code_hint"
            android:inputType="number"
            android:paddingRight="8dp"
            android:textDirection="rtl"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/edit_cell_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <EditText
            android:id="@+id/edit_cell_num"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/editor"
            android:hint="@string/ah_pass_cell_num_hint"
            android:inputType="number"
            android:paddingRight="8dp"
            android:textDirection="rtl"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/edit_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_nat_code" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/editor"
            android:hint="@string/ah_pass_email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_cell_num" />


        <Button
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            android:text="@string/ah_continue"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>


</FrameLayout>
